--- a/public/panel.html
+++ b/public/panel.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
   </head>
   <body>
-    <h1>Options</h1>
+    <div id="panel"></div>
+    <script src="panel.js"></script>
   </body>
 </html>
